--- a/src/style.css
+++ b/src/style.css
@@ -97,3 +97,34 @@ strong {
   margin-top: 20px;
   font-size: 26px;
 }
+
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
+.weather-forecast-date {
+  text-align: center;
+  font-family: "Asimovian", sans-serif;
+  font-size: 20px;
+  line-height: 7px;
+}
+
+.weather-forecast-icon {
+  text-align: center;
+  font-size: 30px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.weather-forecast-temperatures {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.weather-forecast-temperature {
+  padding: 0 10px;
+}
